0.3.2
More sensible default prefs.
File/folders renamed to make gtk3 version completly installable side-by-side with gtk2 version.
Added --enable-plugins to configure.
Added extra instructions to INSTALL for building with plugins.
Code clean to remove compile warnings for packagers.
Max forward/back history can now be set from prefs.
History now works much more like a browser and makes sense!
Increased Forward/Back history.
Fixed bug when removing certain tool items in prefs dialog.
'Back and 'Forward' now remember last 10 jumps.
Added 'Forward' to navigation menu and as extra button to toolbar.
Plugins are now whitelisted instead of blacklisted so new plugs have to be enabled from the plugin prefs.
Included plugins now built and installed globally with main package.
Added SessionManager plugin to main build/install.
Added FileBrowser plugin to main build/install.
Added ClipboardPlugin plugin to main build/install.
Added TerminalPane plugin to main build/install.
Added Auto search option to prefs, set to on ( defaults to off ) to automatically search function defs/gtk docs/qt5 docs/google when clicking "Definition" from toolbar.
Tweaked toolbar icons.
Selecting a tab from the menu now centres the current line.
Underscores in function/bookmark menu now shown properly.
Scroll current line on screen works better.
Adjusing tabs size now doesn't reguire restart.
Added notebook tab size adjustment to prefs.
Added extra debian instructions for gtk 3 in INSTALL ( thanks to Sadi for that ).
Squeezed tabs in gtk3.
Fixed setting font properly in gtk 3.
Added regex error message if badly formed regex search expression.
First run of gtk3 version now imports most settings from gtk2 version ( or vice versa ).
Changed 'Go To Define' toolbar icon.

0.3.1
Code clean.
Fixed revert.
First gtk3 enabled release.

0.3.0
Fixed saving window on exit for gtk3.
Fixed 'Open XTerm Here' script.
Fixed tag highlight all tag colours.
Done gtk3 colur select buttons etc.