@@ -44,9 +44,9 @@ distclean:
 install:
 	gcc ${EXTRAMAKEFLAGS} -fPIC -Wall -g -c ${PLUGNAME}.cpp `pkg-config --cflags --libs ${PLATFORM}+-${GTKVERSION}.0 gmodule-2.0 glib-2.0 gtksourceview-${GTKVERSION}.0 vte${VTESUFFIX}` -DLOCALEDIR=\"${LOCALEFOLDER}\" $(DEVMODE) $(USEGTK3) -DGTK_DISABLE_SINGLE_INCLUDES -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE -o ${PLUGNAME}.o
 	gcc -shared -Wl,--version-script=exportmap,-soname,${PLUGNAME}.so -o lib${PLUGNAME}.so ${PLUGNAME}.o -lc -lvte${VTESUFFIX}
-	mkdir -vp $(DESTDIR)${INSTALLFOLDER} $(DESTDIR)$(LOCALEFOLDER) || true
-	cp -v lib${PLUGNAME}.so $(DESTDIR)$(INSTALLFOLDER)
-	cd po;cp -rv . $(DESTDIR)$(LOCALEFOLDER)
+	mkdir -vp $(DESTDIR)${INSTALLFOLDER} $(DESTDIR)$(LOCALEFOLDER)/fr_FR/LC_MESSAGES || true
+	cp -v lib${PLUGNAME}.so $(DESTDIR)$(INSTALLFOLDER)	
+	cp po/fr_FR/LC_MESSAGES/$(PACKAGENAME).mo $(DESTDIR)$(LOCALEFOLDER)/fr_FR/LC_MESSAGES/$(PACKAGENAME)$(INSTALLSUFFIX).mo
 
 uninstall:
 	rm -rv $(DESTDIR)$(INSTALLFOLDER)/lib${PLUGNAME}.so $(DESTDIR)$(LOCALEFOLDER)/*/LC_MESSAGES/${MONAME}
