@@ -1,4 +1,5 @@
 0.3.2
+Supplied plugins are now also side-by-side installable for both versions.
 More sensible default prefs.
 File/folders renamed to make gtk3 version completly installable side-by-side with gtk2 version.
 Added --enable-plugins to configure.
